--- a/.gitignore
+++ b/.gitignore
@@ -1,18 +1,17 @@
-
 /node_modules
-
 node_modules
 
 *.txt
 rollup.config.js
 postcss.config.js
 notes
-*.txt
+
 
 .storybook
 pushToGit.sh
 publish.sh
 
 notes
-
 auto.sh
+gitFristCommit.sh
+src/stores
